--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="bottom_nav_tap_post">등록</string>
     <string name="bottom_nav_tap_chatting">채팅</string>
     <string name="bottom_nav_tap_mypage">내 정보</string>
+
+    <string name="recent_article_list_title">최근 게시글</string>
 </resources>
