--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
     <string name="app_name">눈송마켓</string>
-
+    // BottomnavigationView
     <string name="bottom_nav_tap_home">홈</string>
     <string name="bottom_nav_tap_post">등록</string>
     <string name="bottom_nav_tap_chatting">채팅</string>
     <string name="bottom_nav_tap_mypage">내 정보</string>
 
+    // HomeFragement
     <string name="recent_article_list_title">최근 게시글</string>
+
+    // PublishActivity
+    <string name="publish_activity_title">상품 등록</string>
 </resources>
